# mesh

./: .bandit  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agent/: .env.example  Dockerfile  pyproject.toml
agent/kosatka_agent/: config.py  docs.py  main.py  security.py
agent/kosatka_agent/providers/: _wgcore.py  awg.py  base.py  marzban.py  wireguard.py  xray.py
agent/tests/: test_agent.py  test_awg_provider.py  test_providers.py
ansible/: deploy.sh  site.yml
ansible/group_vars/: all.yml
ansible/inventory/: hosts.example.yml
ansible/roles/agent/handlers/: main.yml
ansible/roles/agent/tasks/: main.yml
ansible/roles/agent/templates/: agent.env.j2  docker-compose.yml.j2
ansible/roles/awg/handlers/: main.yml
ansible/roles/awg/tasks/: main.yml
ansible/roles/awg/templates/: wg0.conf.j2
ansible/roles/common/tasks/: main.yml
ansible/roles/firewall/tasks/: main.yml
ansible/roles/marzban/tasks/: main.yml
ansible/roles/master/handlers/: main.yml
ansible/roles/master/tasks/: main.yml
ansible/roles/master/templates/: Caddyfile.j2  docker-compose.yml.j2  master.env.j2
ansible/roles/wireguard/handlers/: main.yml
ansible/roles/wireguard/tasks/: main.yml
ansible/roles/wireguard/templates/: wg0.conf.j2
cli/: README.md  pyproject.toml
cli/kosatka_cli/: api.py  config.py  deploy.py  doctor.py  main.py  nodes.py
cli/tests/: test_cli.py  test_cli_api.py  test_nodes.py
docs/: adding-provider.md  api-reference.md  architecture.md  cli.md  quickstart.md
master/: .env.example  Dockerfile  pyproject.toml
master/kosatka_master/: config.py  database.py  main.py  scheduler.py  security.py  webhooks.py
master/kosatka_master/api/v1/: clients.py  nodes.py  router.py  stats.py  subscriptions.py
master/kosatka_master/models/: client.py  event.py  node.py  subscription.py
master/kosatka_master/services/: node_manager.py  subscription_engine.py
master/kosatka_master/services/providers/: agent_provider.py  base.py
master/kosatka_master/static/: install.sh
master/tests/: conftest.py  test_api.py  test_scheduler.py  test_services.py  test_webhooks.py
sdk/: README.md  pyproject.toml
sdk/KosatkaMesh/: __init__.py  client.py  exceptions.py  models.py  webhook.py
sdk/examples/: basic_usage.py  multi_node.py  subscription_flow.py
sdk/kosatka_sdk/: __init__.py  client.py  exceptions.py  models.py
sdk/tests/: test_client.py
