[project]
name = "kosatka-mesh"
version = "0.1.0"
description = "KOSATKA Mesh Monorepo"
requires-python = ">=3.10"
dependencies = [
    "kosatka-master",
    "kosatka-agent",
    "kosatka-sdk",
    "kosatka-cli",
    "uvicorn",
]

[project.scripts]
kosatka-mesh = "kosatka_cli.main:app"

[tool.uv.workspace]
members = [
    "master",
    "agent",
    "sdk",
    "cli",
]

[tool.uv.sources]
kosatka-master = { workspace = true }
kosatka-agent = { workspace = true }
kosatka-sdk = { workspace = true }
kosatka-cli = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli/kosatka_cli"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
