[project]
name = "kosatka-master"
version = "0.1.0"
description = "Kosatka Mesh Master Node"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all]",
    "uvicorn",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "pydantic-settings",
    "apscheduler",
    "httpx",
    "cryptography",
    "python-jose[cryptography]",
    "python-multipart",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kosatka_master"]
