[project]
name = "kosatka-sdk"
version = "0.1.0"
description = "Kosatka Mesh SDK"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.23.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kosatka_sdk"]
